fix: code block overflow

--- a/src/style.css
+++ b/src/style.css
@@ -970,6 +970,7 @@ article {
     border-radius: 5px;
     font-size: 16px;
     line-height: 1.3;
+    overflow-x: auto;
 
     > code {
       border-radius: 5px;
